// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input: CheckBox: [ prop: center, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        Object {
          "justifyContent": "center",
        },
      ]
    }
  >
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      Title
    </TextElement>
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: checkedColor ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="#22d"
      name="check-square-o"
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: checkedIcon ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="green"
      name="bell-o"
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: checkedTitle, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      title - is checked
    </TextElement>
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: component, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableWithoutFeedback
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      Title
    </TextElement>
  </View>
</TouchableWithoutFeedback>
`;

exports[`Input: CheckBox: [ prop: containerStyle ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      Object {
        "backgroundColor": "#071",
      },
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="#bfbfbf"
      name="square-o"
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: fontFamily ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="#bfbfbf"
      name="square-o"
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          Object {
            "fontFamily": "Courier New",
          },
        ]
      }
    >
      Title
    </TextElement>
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: iconRight, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      Title
    </TextElement>
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: noProps ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="#bfbfbf"
      name="square-o"
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: onLongIconPress, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  onLongPress={[Function]}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      Title
    </TextElement>
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: onLongPress, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  onLongPress={[Function]}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      Title
    </TextElement>
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: onPress, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  onPress={[Function]}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      Title
    </TextElement>
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: right, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        Object {
          "justifyContent": "flex-end",
        },
        false,
      ]
    }
  >
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      Title
    </TextElement>
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: textStyle & title ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="#bfbfbf"
      name="square-o"
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          Object {
            "backgroundColor": "#071",
          },
          undefined,
        ]
      }
    >
      Title
    </TextElement>
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: uncheckedColor ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="#d22"
      name="square-o"
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`Input: CheckBox: [ prop: uncheckedIcon ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="#bfbfbf"
      name="bell-slash-o"
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;
